# talks

./: .gitignore  LICENSE  README.rst  index.html
20220430_workshop_dex_arb/: README.rst  index.html
20220430_workshop_dex_arb/intro/: index.html
20220430_workshop_dex_arb/intro/js/controllers/: autoanimate.js  notes.js
20220430_workshop_dex_arb/part-b/: README.rst  hardhat.config.js  hhrun  utils.js
20220430_workshop_dex_arb/part-b/contracts/: Arbitrage_v1.sol
20220430_workshop_dex_arb/part-b/scripts/: ping.js
20220430_workshop_dex_arb/part-b/test/: Arbitrage_v1-test.js
20220604_high_frequency_algotrading_na_solane/: .gitignore  README.rst  index.html
20220604_high_frequency_algotrading_na_solane/css/theme/source/: chkp.scss
20220604_high_frequency_algotrading_na_solane/plugin/markdown/: markdown.esm.js
20220604_high_frequency_algotrading_na_solane/plugin/notes/: notes.esm.js
20220604_workshop_dex_arb/: Makefile  README.rst  index.html
20220604_workshop_dex_arb/intro/: index.html
20220604_workshop_dex_arb/part-b/: config.js  package.json
20220604_workshop_dex_arb/part-b/contracts/: Arbitrage_v1.sol
20220604_workshop_dex_arb/part-b/test/: Arbitrage_v1-test.js
20220605_chainkeepers_lightning/: README.rst  README.rst~  index.html~
20220605_chainkeepers_lightning/plugin/search/: search.js
20220605_high_frequency_algotrading_na_solane/: LINKS  README.rst  grb.html
20220605_high_frequency_algotrading_na_solane/plugin/highlight/: highlight.esm.js  highlight.js
20220605_high_frequency_algotrading_na_solane/plugin/math/: math.esm.js
20220605_high_frequency_algotrading_na_solane/plugin/search/: search.esm.js
20220605_high_frequency_algotrading_na_solane/plugin/zoom/: zoom.esm.js
20220609_defi_walkthrough/: README.rst  index.html
20220609_defi_walkthrough/css/theme/source/: chkp.scss~
20220609_defi_walkthrough/plugin/markdown/: markdown.js
20220609_defi_walkthrough/plugin/notes/: notes.js
20221124_built_for_speed/: LINKS~  NOTES  README.rst  SEI-NODE  SUI  SUI~  index.html
20221124_built_for_speed/notes/: SUI
20221213_workshop_rust_ws_in_python/: README.rst  grab  index.html  run
20221213_workshop_rust_ws_in_python/analyze/src/: main.py
20221213_workshop_rust_ws_in_python/python-websockets/src/: main.py
20221213_workshop_rust_ws_in_python/python/src/: main.py
20221213_workshop_rust_ws_in_python/rust/: Cargo.toml  README.md
20221213_workshop_rust_ws_in_python/rust-python-quick/ruws/: Cargo.toml
20221213_workshop_rust_ws_in_python/rust-python-quick/ruws/src/: lib.rs
20221213_workshop_rust_ws_in_python/rust-python-quick/src/: libruws.pyi  main.py  ruws.py
20221213_workshop_rust_ws_in_python/rust-python-quick/src/tests/: conftest.py  test_ruws.py
20221213_workshop_rust_ws_in_python/rust-python/ruws/: Cargo.toml
20221213_workshop_rust_ws_in_python/rust-python/ruws/src/: lib.rs
20221213_workshop_rust_ws_in_python/rust-python/src/: libruws.pyi  main.py  ruws.py
20221213_workshop_rust_ws_in_python/rust/src/: main.rs
20221213_workshop_rust_ws_in_python/server/src/: main.py
20221213_workshop_rust_ws_in_python/talk/: index.html
_workshop_rust_ws_in_python/: run
_workshop_rust_ws_in_python/python/src/: main.py  report.py
_workshop_rust_ws_in_python/rust/: Cargo.toml  Makefile  README.md
_workshop_rust_ws_in_python/rust-python/ruws/: Cargo.toml
_workshop_rust_ws_in_python/rust-python/ruws/src/: lib.rs
_workshop_rust_ws_in_python/rust-python/src/: libruws.pyi  main.py  ruws.py
_workshop_rust_ws_in_python/rust/src/: main.rs
