[package]

name = "rust-ws"
version = "1.0.0"
edition = "2021"

[dependencies]

# Communication
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features=["sync"] }
futures = "0.3.21"
futures-util = "0.3"
tokio-tungstenite = {version = "0.17.1", features = ["rustls-tls-webpki-roots"]}
url = "2.2.2"

# Serialiation and deserialization
# serde_json = ">=1.0.79"
# serde = ">=1.0.136"
json = ">=0"

# Logging
log = "0.4.16"
simple_logger = "2.1.0"
